--- a/composer.json
+++ b/composer.json
@@ -8,6 +8,7 @@
     },
     "require": {
         "php": ">=5.3.9",
+        "ext-memcached": "*",
         "symfony/symfony": "2.7.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
