--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,6 @@
     },
     "require": {
         "php": ">=5.3.9",
-        "ext-memcached": "*",
         "symfony/symfony": "2.7.*",
         "doctrine/orm": "^2.4.8",
         "doctrine/doctrine-bundle": "~1.4",
@@ -17,7 +16,10 @@
         "symfony/monolog-bundle": "~2.4",
         "sensio/distribution-bundle": "~4.0",
         "sensio/framework-extra-bundle": "^3.0.2",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "snc/redis-bundle": "^1.1",
+        "doctrine/mongodb-odm": "^1.0",
+        "doctrine/mongodb-odm-bundle": "^3.0"
     },
     "require-dev": {
         "sensio/generator-bundle": "~2.3"
