Conf env mongolab

--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,9 +82,9 @@ swiftmailer:
 doctrine_mongodb:
     connections:
         default:
-            server: mongodb://localhost:27017
+            server: "%database.mongolab.uri%"
             options: {}
-    default_database: test_database
+    default_database: registry
     document_managers:
         default:
             auto_mapping: true
