--- a/composer.json
+++ b/composer.json
@@ -45,7 +45,8 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "compile": [
-            "rm web/app_dev.php"
+            "rm web/app_dev.php",
+            "app/console debug:config doctrine_mongodb"
         ]
     },
     "config": {
