--- a/composer.json
+++ b/composer.json
@@ -45,8 +45,7 @@
             "Sensio\\Bundle\\DistributionBundle\\Composer\\ScriptHandler::prepareDeploymentTarget"
         ],
         "compile": [
-            "rm web/app_dev.php",
-            "app/console debug:config doctrine_mongodb"
+            "rm web/app_dev.php"
         ]
     },
     "config": {
