--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,8 +2,11 @@
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
 #    parameter_name: value
-
+    provider_selector_name: "AppBundle\Services\Provider\Selector\FirstSelector"
+    
 services:
 #    service_name:
 #        class: AppBundle\Directory\ClassName
 #        arguments: ["@another_service_name", "plain_value", "%parameter_name%"]
+    provider_selector:
+        class: "%provider_selector_name%"
