--- a/app/config/services.yml
+++ b/app/config/services.yml
@@ -2,7 +2,7 @@
 # http://symfony.com/doc/current/book/service_container.html
 parameters:
 #    parameter_name: value
-    provider_selector_name: "AppBundle\Services\Provider\Selector\FirstSelector"
+    provider_selector_name: "AppBundle\\Services\\Provider\\Selector\\FirstSelector"
     
 services:
 #    service_name:
