--- a/composer.json
+++ b/composer.json
@@ -7,7 +7,7 @@
         "psr-4": { "": "src/" }
     },
     "require": {
-        "php": ">=5.3.9",
+        "php": "~5.5.16",
         "ext-mongo": "*",
         "symfony/symfony": "2.7.*",
         "doctrine/orm": "^2.4.8",
